# Inwentaryzacja-nosnikow_v3

./: .github\workflows\windows-build.yml  README-NAPRAWA-BUDOWANIA.md  README-URUCHOMIENIE-EXE.md  README-ZMIANY-V5.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: windows-build.yml
scripts/: build-windows.bat
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/lib/: api.ts  pdf.ts
src/styles/: app.css
